--- a/wp-content/themes/tomoveit/package.json
+++ b/wp-content/themes/tomoveit/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
+    "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
     "core-js": "^2.5.7",
     "css-loader": "^1.0.1",
