--- a/wp-content/themes/tomoveit/package.json
+++ b/wp-content/themes/tomoveit/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.7",
     "css-loader": "^1.0.1",
     "cssnano": "^4.1.10",
+    "moment": "^2.29.1",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
