--- a/wp-content/themes/tomoveit/package.json
+++ b/wp-content/themes/tomoveit/package.json
@@ -37,6 +37,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.6.5",
+    "react-player": "^2.8.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-tippy": "^1.3.1",
